--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -21,6 +21,11 @@
      <h2>Nouveautés</h2>
    </div>
     <div class="new-arrivals-container">
+      <main-item-card></main-item-card>
+      <main-item-card></main-item-card>
+      <main-item-card></main-item-card>
+      <main-item-card></main-item-card>
+      <!--
       <div class="card">
         <img src="assets/img/kitchen.jpg" alt="New kitchen">
         <h3>Cuisine italienne</h3>
@@ -41,6 +46,7 @@
         <h3>Sale de bain</h3>
         <p class="price">169,99 $</p>
       </div>
+      -->
     </div>
   </section>
 
