--- a/src/styles.css
+++ b/src/styles.css
@@ -2,14 +2,19 @@
 
 :root
 {
+  --color-main-dark: #003B49;
+  --color-main-dark-light: rgba(0, 59, 73, 0.5);
+  --color-gold: #F4D19E;
 
-  --color-txt: #33011f;
-  --color-main: #f0f0f0;  /* #f2f2f2; #f2f2f2; #fbfbf9; */
-  --color-1: #e6e1e1; /*rgba(202,0,146,255); */
+  --color-txt: #F4D19E;
+  --color-main: #003B49;
+  /* --color-txt: #33011f; /* #003B49 */
+  /* --color-main: #f0f0f0;  /* #f2f2f2; #f2f2f2; #fbfbf9; */
+  --color-1: #003B49; /* #e6e1e1; /*rgba(202,0,146,255); */
   --color-1-1: rgba(165, 42, 42, 0.6);
   --color-2: #b546a9;
-  --color-3:  #f3c1ea;
-  --color-4: rgba(241,219,236,255);
+  --color-3: #f3c1ea;
+  --color-4: rgba(241, 219, 236, 255);
   --color-5: #f1dbec;
   --color-6: #f8eaf5;
   --color-br-1: #bc5c00;
@@ -80,10 +85,7 @@ body {
 {
   max-width: 1200px;
   margin: 50px auto 60px auto;
-
 }
-
-
 
 
 
