--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -21,10 +21,18 @@
      <h2>Nouveautés</h2>
    </div>
     <div class="new-arrivals-container">
-      <main-item-card></main-item-card>
-      <main-item-card></main-item-card>
-      <main-item-card></main-item-card>
-      <main-item-card></main-item-card>
+      <main-item-card image="assets/img/kitchen.jpg"
+                      price="99,99"
+                      title="Cuisine italienne"></main-item-card>
+      <main-item-card image="assets/img/room.jpg"
+                      price="129,99"
+                      title="Chambre Allemande"></main-item-card>
+      <main-item-card image="assets/img/salon.jpg"
+                      price="149,99"
+                      title="Cuisine italienne"></main-item-card>
+      <main-item-card image="assets/img/bathroom.jpg"
+                      price="129,99"
+                      title="Sale de bain"></main-item-card>
       <!--
       <div class="card">
         <img src="assets/img/kitchen.jpg" alt="New kitchen">
