--- a/src/app/core/not-found/not-found.component.html
+++ b/src/app/core/not-found/not-found.component.html
@@ -1,1 +1,5 @@
-<p>not-found works!</p>
+<div class="main page-404">
+  <h1>Oops! 404</h1>
+  <p>Nous n'arrivons pas à trouver la page que vous recherchez.</p>
+  <a routerLink="/home">Retour à la page d'accueil</a>
+</div>
